[package]
name = "fastdl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
futures-util = "0.3.31"
indicatif = "0.18.3"
reqwest = { version = "0.13.1", features = ["stream"] }
tokio = { version = "1.49.0", features = ["full"] }
